# pj_random_object

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.agents/skills/econometrics-proof-auditor/: SKILL.md
.agents/skills/econometrics-proof-auditor/references/: asymptotic_tools.md  common_failures.md  empirical_process.md  extremum_estimators.md  gmm.md  m_estimation.md  theorem_index.md
.agents/skills/econometrics-proof-auditor/scripts/: build_theorem_cards.py  extract_pdf_text.py  locate_theorem.py  search_corpus.py
.agents/skills/econometrics-proof-auditor/tests/: test_bad_proof_uniform_convergence.md  test_delta_method.md  test_extremum_consistency.md  test_gmm_asymptotic_normality.md  test_missing_rank_condition.md
adhoc/: frechet_visualization_demo.ipynb  petersen_and_muller.ipynb
notes/: README.md  _template.md
papers/: README.md
shared/: README.md
topics/: README.md
topics/_template/: README.md
topics/_template/code/R/: README.md
topics/_template/code/julia/: README.md
topics/_template/data/: README.md
topics/_template/output/: README.md
topics/_template/slides/: README.md
topics/arx/: README.md
topics/arx/code/python/: README.md
topics/arx/manuscript/: README.md
